<resources>
    <string name="app_name">FoodKakis</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_page">Profile Page</string>
    <string name="full_belly_happy_heart">Full Belly, Happy Heart</string>
    <string name="connect_through_food">Connect Through Food</string>
    <string name="login_bg">login_bg</string>
    <string name="sign_in">Sign In</string>
    <string name="text_logo">text_logo</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_email">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="tell_us_your_name">Tell us your name!</string>
    <string name="next">Next</string>
    <string name="when_is_your_birthday">When is your Birthday?</string>
    <string name="dd_mm_yyyy">DD / MM / YYYY</string>
    <string name="describe_yourself">Describe Yourself!</string>
    <string name="quality_over_quantity">Quality over quantity!</string>
    <string name="share_interesting_facts_hobbies_favourite_food_to_stand_out_from_the_rest">Share interesting facts / hobbies / favourite food to stand out from the rest!</string>
    <string name="gender">Gender</string>
    <string name="default_gender">Default Gender</string>
    <string name="birthday">Birthday</string>
    <string name="update_profile">Update Profile</string>
    <string name="default_description">Default description</string>
    <string name="default_birthday">Default Birthday</string>
    <string name="my_profile">My Profile</string>
    <string name="update_photos">Update Photos</string>
    <string name="foodkakis">FoodKakis</string>
    <string name="choose_mode_of_connection">Choose Mode of Connection</string>
    <string name="matched_according_to_availability_amp_food_preference"><![CDATA[Matched according to availability & food preference]]></string>
    <string name="corporateconnect">CorporateConnect</string>
    <string name="surpriseme">SurpriseMe</string>
    <string name="catered_to_spontaneous_meetups">Catered to spontaneous meetups</string>
    <string name="indicate_your_availability">Indicate Your Availability</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="craving_for">Craving For</string>
    <string name="find_me_a_kaki">Find me a kaki!</string>
    <string name="seek_out_corporate_connections_amp_network_with_peers_in_your_field"><![CDATA[Seek out corporate connections & network with peers in your field]]></string>
    <string name="work_in_progress_check_back_again">Work In Progress, Check back again!</string>
    <string name="work_in_progress_stay_tuned_for_our_next_update">Work in progress, stay tuned for our next update!</string>
    <string name="logo">logo</string>
    <string name="foodkakis_mode_image">foodkakis_mode_image</string>
    <string name="corpconnect_mode_image">corpconnect_mode_image</string>
    <string name="surpriseme_mode_image">surpriseme_mode_image</string>
    <string name="select_timeslot">Select Timeslot</string>
    <string name="add_up_to_3_cravings">Add up to 3 cravings!</string>
    <string name="add_cravings_button">add cravings button</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="update_photo">Update Photo</string>
    <string name="sign_up_lower">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="re_enter_your_password">Re-enter your Password</string>
    <string name="reset_my_account">Reset my account</string>
    <string name="reset_account">Reset Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="latest_fnb_deals"><![CDATA[Latest F&B Deals]]></string>
    <string name="refer_to_the_below_mentioned_for_the_full_terms_conditions_of_the_f_b_campaign"><![CDATA[Refer to the below-mentioned for the full Terms & Conditions of the F&B campaign]]></string>
    <string name="cancel_request">Cancel Request</string>
    <string name="select_up_to_3_cravings">Select up to 3 cravings</string>
    <string name="check_back_later_no_more_matches_to_swipe">Check back later! No more matches to swipe!</string>
    <string name="more_details">More details</string>
    <string name="description_goes_here">Description goes here</string>
    <string name="header">Header</string>
    <string name="valid_till_xx_december_20xx">Valid till XX December 20XX</string>
    <string name="a_link_will_be_sent_to_the_registered_email_to_reset_your_account">A link will be sent to the registered Email to reset your account</string>
    <string name="splashscreen">splashscreen</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo_of_yourself">Photo of Yourself!</string>
    <string name="show_us_your_most_flattering_angle">Show us your most flattering angle!</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <!--    <string name="default_web_client_id">319959386482-fn880e8p7u7hjv83hcbgen6r4hhhs0eb.apps.googleusercontent.com</string>-->
</resources>