<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhatGenderActivity">

    <TextView
        android:id="@+id/whatGenderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:text="@string/what_is_your_gender"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/genderChipGrp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/CustomButton"
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderChipGrp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/genderChipGrp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatGenderText"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/maleChip"
            style="@style/Widget.Gender.Chip"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/femaleChip"
            style="@style/Widget.Gender.Chip"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18sp" />



        <com.google.android.material.chip.Chip
            android:id="@+id/notSayChip"
            style="@style/Widget.Gender.Chip"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/prefer_not_to_say"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18sp" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>