<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TellUsBdayActivity">

    <TextView
        android:id="@+id/tellUsBdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/when_is_your_birthday"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tellUsBdayFill"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tellUsBdayFill"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:importantForAutofill="no"
        android:inputType="text|date"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimaryDark"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tellUsBdayText" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="@+id/tellUsBdayFill"
        app:layout_constraintTop_toBottomOf="@+id/tellUsBdayFill" />

</androidx.constraintlayout.widget.ConstraintLayout>