<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TellUsNameActivity">

    <TextView
        android:id="@+id/tellUsNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tell_us_your_name"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tellUsNameFill"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tellUsNameFill"
        android:layout_width="0dp"
        android:layout_marginHorizontal="36dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tellUsNameText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:layout_marginHorizontal="36dp"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tellUsNameFill" />
</androidx.constraintlayout.widget.ConstraintLayout>